[gd_scene load_steps=6 format=2]

[ext_resource path="res://FlappyBirdAssets/pipe-green.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pipe.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.2659, 52.3852 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.2088, 160.741 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.9822, 159.679 )

[node name="Pipe" type="Node2D"]
position = Vector2( 271.636, 8.97969 )
script = ExtResource( 2 )

[node name="EncreaseScoreArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EncreaseScoreArea"]
position = Vector2( 34.8071, 178.875 )
shape = SubResource( 3 )

[node name="TopPipe" type="StaticBody2D" parent="."]
position = Vector2( 0, -36.9995 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="TopPipe"]
texture = ExtResource( 1 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
shape = SubResource( 1 )

[node name="BottomPipe" type="StaticBody2D" parent="."]
position = Vector2( 0, 394 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BottomPipe"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
shape = SubResource( 2 )

[connection signal="body_entered" from="EncreaseScoreArea" to="." method="_on_EncreaseScoreArea_body_entered"]
